<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_shipping_method">Selecione o Método de Entrega</string>
    <string name="select_payment_method">Selecione o Metodo de Pagamento</string>
    <string name="txt_total">Total</string>
    <string name="txt_carrinho_valor">€-</string>
    <string name="txt_checkout">Checkout</string>
    <string name="txt_metodo_de_envio">Metodo de Envio:</string>
    <string name="txt_metodo_de_pagamento">Metodo de Pagamento:</string>
    <string name="txt_efetuar_encomenda">Efetuar Encomenda</string>
    <string name="txt_api_setup">Setup</string>
    <string name="txt_ip_api">172.22.21.211:8080</string>
    <string name="txt_confirmar">Confirmar</string>
    <string name="txt_title">Title</string>
    <string name="txt_40">40€</string>
    <string name="txt_detalhes">Detalhes</string>
    <string name="txt_descricao">Um bolo de chocolate é uma delícia tentadora que combina uma massa macia e fofa, geralmente de cor escura e rica devido ao cacau ou chocolate utilizado. Sua textura pode variar de úmida a aerada, dependendo da receita.</string>
    <string name="txt_nomeproduto">NomeProduto</string>
    <string name="txt_preco">Preço</string>
    <string name="txt_iva">IVA</string>
    <string name="txt_quantidade">Quantidade</string>
    <string name="txt_totalvalor">Total</string>
    <string name="txt_informacoes_da_fatura">Informações da Fatura</string>
    <string name="txt_welcome_to_amai_app">Welcome to Amai APP</string>
    <string name="txt_sabores_deliciosos_seu_desejo_doce_agora_em_cada_pedido">Sabores Deliciosos! Seu Desejo Doce, Agora em Cada Pedido!</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_intro_login">Login</string>
    <string name="txt_faturas">Faturas</string>
    <string name="txt_groove">GrooveTech</string>
    <string name="txt_api_ip">IP</string>
    <string name="txt_app">App</string>
    <string name="txt_kaka">kaka</string>
    <string name="txt_password_login">123123123</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_editar_dados">Editar Dados</string>
    <string name="txt_data_de_nascimento">Data de Nascimento:</string>
    <string name="txt_data_nascimento">01 JAN 2000</string>
    <string name="txt_atualizar_dados">Atualizar dados</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_groove_signup">GrooveTech</string>
    <string name="txt_app_signup">App</string>
    <string name="txt_btn_signup">Signup</string>
    <string name="txt_ja_tens_conta">Já tens conta?</string>
    <string name="txt_login_signup">Login</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="txt_username_home_page">Username</string>
    <string name="txt_bem_vindo">Bem-vindo</string>
    <string name="txt_titulo_home">Loja</string>
    <string name="txt_mensagem_pesquisa">Resultados para &quot;%1$s&quot;</string>
    <string name="txt_ver_todos">Ver Todos</string>
    <string name="txt_perfil_username">Username</string>
    <string name="txt_perfil_primeiro_nome">Primeiro Nome</string>
    <string name="txt_perfil_apelido">Apelido</string>
    <string name="txt_perfil_email">Email</string>
    <string name="txt_perfil_d_pessoais">D. Pessoais</string>
    <string name="txt_perfil_d_morada">D. Morada</string>
    <string name="txt_perfil_ver_faturas">Ver Faturas</string>
    <string name="txt_perfil_telemovel">Telemóvel:</string>
    <string name="txt_perfil_nif">NIF:</string>
    <string name="txt_perfil_genero">Género:</string>
    <string name="txt_perfil_data_de_nascimento">Data de Nascimento:</string>
    <string name="txt_btn_editar_perfil">Editar Perfil</string>
    <string name="txt_title_produto">title</string>
    <string name="txt_produto_valor">0€</string>
    <string name="txt_carrinho_title">Title</string>
    <string name="txt_carrinho_produto_valor">0€</string>
    <string name="txt_quantidade_produto">0</string>
    <string name="txt_menos">-</string>
    <string name="txt_mais">+</string>
    <string name="txt_fatura">Fatura 01</string>
    <string name="txt_data_fatura">14/05/2020</string>
    <string name="txt_fatura_valor">Valor</string>
    <string name="txt_produto_title">Title</string>
    <string name="txt_detalheproduto_valor">0€</string>
    <string name="txt_produtonome_title">Title</string>
    <string name="txt_valorproduto">0€</string>
    <string name="txt_linhafatura_name">Name</string>
    <string name="txt_linhafatura_price">Price</string>
    <string name="txt_linhafatura_iva">IVA</string>
    <string name="txt_linhafatura_quantity">Quantity</string>
    <string name="txt_linhafatura_subtotal">Sub-Total</string>
    <string name="hint_api_url">API URL</string>
    <string name="hint_primeiro_nome">Primeiro Nome</string>
    <string name="hint_apelido">Apelido</string>
    <string name="hint_telemovel">Número de Telemóvel</string>
    <string name="hint_nif">NIF</string>
    <string name="hint_rua">Rua</string>
    <string name="hint_localidade">Localidade</string>
    <string name="hint_codigo_postal">Código Postal</string>
    <string name="hint_genero">Selecione o seu género</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="erro_atualizar_perfil">Erro ao dar update no perfil</string>
    <string name="perfil_atualizado_sucesso">Perfil atualizado com sucesso</string>
    <string name="genero_selecionado">Género selecionado: %s</string>
    <string name="telemovel_invalido">Formato de telemovel inválido (000-000-000)</string>
    <string name="nif_invalido">Formato do nif inválido (9 digitos)</string>
    <string name="codigopostal_invalido">Formado do código postal inválido (0000-000)</string>
    <string name="txt_categoria">Categoria</string>
    <string name="txt_carrinho_subtotal">Subtotal</string>
    <string name="back_button">seta pra voltar atrás</string>
    <string name="metodo_pagamento_selecionado">"Método de pagamento selecionado: "</string>
    <string name="metodo_expedicao_selecionado">"Método de expedicao selecionado: "</string>
    <string name="encomenda_finalizada_com_sucesso">Encomenda finalizada com sucesso</string>
    <string name="fatura">Fatura #90</string>
    <string name="fatura_seccao_De">De:</string>
    <string name="empresa">GrooveTech</string>
    <string name="email_empresa_fatura">groovetech@mail.com</string>
    <string name="rua_fatura_campo">Rua Morro Lena, Alto Do Vieiro</string>
    <string name="cp_fatura_campo">2411-901 Leiria</string>
    <string name="telemovel_fatura_campo">244111222</string>
    <string name="dataFaturacao_nome_fatura">Data de faturação:</string>
    <string name="dataFaturação_campo_fatura">2024-11-16 13:57:55</string>
    <string name="titulo_tabela_fatura">Resumo da compra</string>
    <string name="coluna_produto_tabela">Produto</string>
    <string name="coluna_preco_tabela">Preço</string>
    <string name="coluna_quantidade_tabela">Quantidade</string>
    <string name="coluna_subtotal_tabela">Sub-Total</string>
    <string name="subtotal_fatura_nome">Sub-Total:</string>
    <string name="subtotal_campo_fatura">Valor</string>
    <string name="totaliva_nome_fatura">Iva:</string>
    <string name="totaliva_campo_fatura">Valor</string>
    <string name="total_nome_fatura">Total:</string>
    <string name="valortotal_campo_fatura">Valor</string>
    <string name="metodo_expedicao_nome_fatura">Método de Expedição:</string>
    <string name="metodo_expedicao_campo_fatura">Envio para Portugal Continental</string>
    <string name="metodo_pagamento_nome_fatura">Método de Pagamento:</string>
    <string name="metodo_pagamento_campo_fatura">Visa/MasterCard</string>
    <string name="perfil_hint_selecionarData">Selecionar data</string>
    <string name="bottom_nav_paginaInicial">Página Inicial</string>
    <string name="bottom_nav_carrinho">Carrinho</string>
    <string name="bottom_nav_perfil">Perfil</string>
    <string name="bottom_nav_favoritos">Favoritos</string>
    <string name="nome_obrigatorio">Nome Obrigatório</string>
    <string name="apelido_obrigatorio">Apelido Obrigatório</string>
    <string name="localidade_obrigatoria">Localidade obrigatória</string>
    <string name="rua_obrigatoria">Rua obrigatória</string>
    <string name="codigopostal_obrigatorio">Código postal obrigatório</string>
    <string name="telemovel_obrigatorio">Telemóvel obrigatório</string>

</resources>