<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/home"
    android:title="@string/bottom_nav_paginaInicial"
    android:icon="@drawable/home_icon_bottom_bar" />
    <item
        android:id="@+id/carrinho"
        android:title="@string/bottom_nav_carrinho"
        android:icon="@drawable/cart_icon_bottom_bar"
        app:showAsAction="always"
        android:actionLayout="@layout/menu_cart_badge"/>
    <item
        android:id="@+id/perfil"
        android:title="@string/bottom_nav_perfil"
        android:icon="@drawable/profile_icon_bottom_bar" />
    <item
        android:id="@+id/favoritos"
        android:title="@string/bottom_nav_favoritos"
        android:icon="@drawable/favorite_icon_bottom_bar" />
</menu>