<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Header Row -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            android:gravity="left"
            android:text="@string/txt_linhafatura_name"
            android:textSize="16sp"
            android:textColor="@color/MainThemeColor"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvPreco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_linhafatura_price"
            android:textColor="@color/MainThemeColor"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvQuantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_linhafatura_quantity"
            android:textSize="16sp"
            android:textColor="@color/MainThemeColor"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvSubTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_linhafatura_subtotal"
            android:textSize="16sp"
            android:textColor="@color/MainThemeColor"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
</TableLayout>
