<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/apiSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_groove"
                    android:textColor="@color/text_color"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_app"
                    android:textColor="@color/text_color"
                    android:textSize="45sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="32dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/hint_login_username"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="@color/text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/text_color"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="75dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/blue_button_background"
                android:onClick="onClickLogin"
                android:text="@string/txt_btn_login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/text_utilizador"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signupTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSignupButtonClick"
                    android:text="@string/text_sign_up"
                    android:textColor="@color/red"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>